Fix views when wrapped by two .layout.list > .view.list divs

--- a/sugarcrm/styleguide/css/bootstrap-mobile.css
+++ b/sugarcrm/styleguide/css/bootstrap-mobile.css
@@ -3721,6 +3721,10 @@ h1 {
 .altview {
   display: none;
 }
+body > .layout.list,
+body > .layout.list > .view.list {
+  display: inline;
+}
 /* activity and twitter */
 article {
   position: relative;
