--- a/sugarcrm/styleguide/less/sugarmobile.less
+++ b/sugarcrm/styleguide/less/sugarmobile.less
@@ -65,6 +65,11 @@ h1 {font-size: 26px !important;}
 .fright {float: right !important}
 .altview {display:none;}
 
+body > .layout.list,
+body > .layout.list > .view.list {
+  display:inline;
+}
+
 /* activity and twitter */
 
 article {
